# one_identity_task

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile
include/: client_parameters.h  logging.h  process_return_codes.h  random_sequence_util.h  server.h  server_parameters.h
src/: client.c  client_parameters.c  logging.c  main_client.c  main_server.c  random_sequence_util.c  server.c  server_parameters.c
tests/: CMakeLists.txt
tests/src/: random_sequence_generator_tests.cc
